# ChangeLog for sys-kernel/ck-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.194 2011/05/07 22:31:39 nelchael Exp $

*ck-sources-2.6.38-r1 (07 May 2011)

  07 May 2011; Krzysztof Pawlik <nelchael@gentoo.org>
  -ck-sources-2.6.35-r7.ebuild, -ck-sources-2.6.35-r8.ebuild,
  -ck-sources-2.6.35-r9.ebuild, -ck-sources-2.6.36-r3.ebuild,
  -ck-sources-2.6.36-r4.ebuild, -ck-sources-2.6.36-r5.ebuild,
  +ck-sources-2.6.38-r1.ebuild:
  Version bump, remove old.

*ck-sources-2.6.38 (06 Apr 2011)

  06 Apr 2011; Krzysztof Pawlik <nelchael@gentoo.org>
  +ck-sources-2.6.38.ebuild:
  Version bump.

*ck-sources-2.6.37 (08 Jan 2011)

  08 Jan 2011; Krzysztof Pawlik <nelchael@gentoo.org>
  +ck-sources-2.6.37.ebuild:
  Version bump.

*ck-sources-2.6.36-r5 (28 Dec 2010)

  28 Dec 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  -ck-sources-2.6.34-r1.ebuild, -ck-sources-2.6.34-r2.ebuild,
  -ck-sources-2.6.34-r3.ebuild, -ck-sources-2.6.34-r4.ebuild,
  -ck-sources-2.6.34-r5.ebuild, -ck-sources-2.6.35-r1.ebuild,
  -ck-sources-2.6.35-r2.ebuild, -ck-sources-2.6.35-r3.ebuild,
  -ck-sources-2.6.35-r4.ebuild, -ck-sources-2.6.35-r5.ebuild,
  -ck-sources-2.6.35-r6.ebuild, -ck-sources-2.6.36.ebuild,
  -ck-sources-2.6.36-r1.ebuild, -ck-sources-2.6.36-r2.ebuild,
  +ck-sources-2.6.36-r5.ebuild:
  Revision bump for new genpatches, remove old versions.

*ck-sources-2.6.35-r9 (18 Dec 2010)

  18 Dec 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  +ck-sources-2.6.35-r9.ebuild:
  Revision bump for new genpatches.

*ck-sources-2.6.36-r4 (12 Dec 2010)
*ck-sources-2.6.35-r8 (12 Dec 2010)

  12 Dec 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  +ck-sources-2.6.35-r8.ebuild, +ck-sources-2.6.36-r4.ebuild:
  Revision bumps for new genpatches.

*ck-sources-2.6.35-r7 (23 Nov 2010)

  23 Nov 2010; Krzysztof Pawlik <nelchael@gentoo.org>
  +ck-sources-2.6.35-r7.ebuild:
  Revision bump for new genpatches.
