@@ -11,24 +11,29 @@ DIST genpatches-2.6.38-2.base.tar.bz2 48753 RMD160 417ca84cb264b96957868b8c9ab30
 DIST genpatches-2.6.38-2.extras.tar.bz2 15668 RMD160 79642f14a75c96f029dfb6ec4f86fe82a34b5094 SHA1 adde8ec89e98f4ee0ada4bfc24d225157efec2be SHA256 ffad6a0c3015fd0fe43f512fa353e0206a4eb0d45102459180391f96d2204caa
 DIST genpatches-2.6.38-5.base.tar.bz2 121256 RMD160 df96fd9e8a18a2b0738b90122dc1be14042f30a2 SHA1 604117bfd1d8d5901ec3dabe5d83285e411748e8 SHA256 1c34e81dde44f2a6a07ad679d68276d22cb59da3245b8a6bd845ecd885b592cc
 DIST genpatches-2.6.38-5.extras.tar.bz2 15665 RMD160 39abb5818bdc5025ff9b6648f976e48ded035776 SHA1 c89301b292e398a31051fae885312aeb938c9278 SHA256 e4335af53a45ccb40396a6cbcac753ceb48c63aeea4f8fbb578070c1ab24d33f
+DIST genpatches-2.6.39-1.base.tar.bz2 1317 RMD160 2f7e5e5e9b44e784a4b2fab50fe5ef6beefc8804 SHA1 7002d7a599e2da000eb8aab4f521b1c5389d72f6 SHA256 50734fd32aca7eb95c9056b5a1a87d95f3b1674a232d098511a7dc4640e9cb23
+DIST genpatches-2.6.39-1.extras.tar.bz2 15672 RMD160 e94ef6536034ccb5e8cf7d5b0282c2274f33cc0d SHA1 68edf710278d5c0454f361b140663d9eb4ea6998 SHA256 8cd7268fc0329278e0fd00fdde9e928c353e591c5147fb4eed50a80fefbf87fa
 DIST linux-2.6.37.tar.bz2 73577826 RMD160 fced3801f3c94aa545c90e10981de616376a3b41 SHA1 eba83c89e71a86060ef6ff76aefff660aef819e2 SHA256 edbf091805414739cf57a3bbfeba9e87f5e74f97e38f04d12060e9e0c71e383a
 DIST linux-2.6.38.tar.bz2 74739098 RMD160 d1179be93f1309303b9aa6008a25b6247726e764 SHA1 02aade5ad3dedd70739c9b4a05de40edbe432d25 SHA256 72f0cfaefb8dc86b219d5a742dd0375332627641ecbdf5badd3158e2127b9304
+DIST linux-2.6.39.tar.bz2 76096559 RMD160 feddc516bc15e78f12f611ff184d38baa4eac4ee SHA1 68518112821e55f4ac1df64f2e0e809cedfcc5ef SHA256 584d17f2a3ee18a9501d7ff36907639e538cfdba4529978b8550c461d45c61f6
 DIST patch-2.6.37-ck1.bz2 60938 RMD160 fed1c0e99ba8422c3407e771abd29f6a05fd212e SHA1 48a75ad5a23dd639db9d0d0446c6d5dbdd6bf448 SHA256 74566aa7fa7f4df1830561989c4601bc77f6dd0a817321b3c92d1b2479a7cd03
 DIST patch-2.6.38-ck1.bz2 60415 RMD160 f83ec276ce94cd6276cc27f4133e797ee95e25c8 SHA1 b6ea93260745b7c7f475c8d5b93e408c2066170a SHA256 6e21d70edc46bffeb7c37a57f831531c0213c7e63ffb0e32159cc4d79c612abd
 DIST patch-2.6.38-ck3.bz2 60538 RMD160 82f9bb2bb340da5bdb56378062fe1a2445e766c6 SHA1 afa9cb6378d0bfe46acfa05d26edfd4b138fbac5 SHA256 c20587e76a9c758852c2af01ffaed15e91016be56cbce60754150d26c6fbd78f
+DIST patch-2.6.39-ck1.bz2 61023 RMD160 44b4afc89dd15d20bfc1ce3ab81c9e7606a8c438 SHA1 70e1cda169fd531c3f08e6960ca2ad0b6bcedf72 SHA256 dd366b4244147585f2a0026807e9d2abe1b4d678cd3a18e6e6a37a7b3930469f
 EBUILD ck-sources-2.6.37.ebuild 1470 RMD160 1c5714581693225055563685ddf34acc05d9b560 SHA1 640a21ae0e326c0bed88afc39c3daec29752f36b SHA256 c49b187cb6d254a4f3911b4d5017f228e7f2f08ec52e2adb875b6f63794d86de
 EBUILD ck-sources-2.6.38-r1.ebuild 1473 RMD160 0c33c03634f42ee8ea2a3126a581119f81706a94 SHA1 15ca96d54d00e20fc5f30033134c583851103515 SHA256 4ed92741ea7e997808530079200a400803ffb0d64a66a85ca6d09a44d5617045
 EBUILD ck-sources-2.6.38.ebuild 1470 RMD160 3e6ec78f7a8c83c0f1f54050ecf380168a78e7d6 SHA1 f844e350fc026d799d4d8f0448fc752d311f8c6f SHA256 1aac449e9672502e65843e46a452125afd1b053356442c8172d212fbfae6facb
-MISC ChangeLog 6077 RMD160 a09a6b5fde53faf7fdd2f8a89c7887344a607ab8 SHA1 fffefc42b55edaa06b0c58999bb96d18314fb4f2 SHA256 bd4928f8e8272ffce64e1dd90e8145363749d69c6cff9c1357f2995719bf8125
+EBUILD ck-sources-2.6.39.ebuild 1470 RMD160 96da4315559ba3e2bee5e5dad1e393f44d14d696 SHA1 85fcced560b009c383af6ec83b083578688d1ef8 SHA256 8b6dcd41e0268722cf0c39541e2f10167f352200af4d6cac1fb7530b9ddb46d0
+MISC ChangeLog 6211 RMD160 733bd3fb638e4ef9dbaae58af80de510c26ecf1e SHA1 79c9d926d54bd285f147edeec71dd3560a9544d9 SHA256 64e07af3bf9a81d3c21ce662a352cfa0a318b3d4d6ab24ff82a4c4c75589c3d5
 MISC metadata.xml 379 RMD160 4081346728d51d445b098c8e56afff0182f2774b SHA1 c8dd1df58e8d71a2f57b2d426587097aaa6f4da7 SHA256 2e5f77825d16ea23d40c6016a4f35ccab9723f679c2e83e3adcca5ce40424905
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBCgAGBQJNxchSAAoJEBZyv1r2qA5GnsgH/2qBSb//wlJAc7HGjoGrzi30
-eyytxqStEIaRKn0Y7FuA7tbBjbVMc4DMpsAEqTNlPiz4RBRKowguoANrLbWvzdBv
-mn0Ci5RuTj1+ompYsvP2vhHJpbR1Z1DVgq49J+tZvUZxTEtKH6bP3Q+YFuFPE2hu
-kL5/pziP9niXB4fBfY9Z8RlSsFYN5U8W2Hgd6MpBiZwLBVc4+pmVdUzs7fJehA7T
-ID0bfcRA0jtNPzZhyeiWpAt/5ATManLwWPr4qXKxuMaU4wiMZvyprCUiMvpIWpyX
-Kvxp3LPdKDIW6Odi1Dwv4ef2MpEw3HsNRECCchzcW0yuIQjocQ5/zlzju0Lb4gA=
-=8HSG
+iQEcBAEBCgAGBQJN27dpAAoJEBZyv1r2qA5GGusIAIjd8CzOetfQ1QRizb3VgwPQ
+n2BhlhrrMitPaFxIU2EWlCTWTctJvjvEscrM3k8Mjm95a7W5brsOQ6FF5MXrPOhA
+gLOH3Ow+lm6x48PxNA+gt50PTYGM6QBR/21mntOXigza7v6DeYnNWrPhsh3UDaHx
+J9MbgGvVIycb/y8168SyWIr8/vED7S4sGDWxZ9g8uWH2mQtGAmPODyxl2l3nx2Vj
+iev2PevR0LJBncYKP5CQaTSKeaDcPYCo51vkxyO011mWIqWxrgAH3Hems7G0/y3G
+belZ1hVdoBvFaXMTqld6BzNl/qQJTYaMO9bL9X/TOnI1VX2w0wcElD54opyvge8=
+=zwTC
 -----END PGP SIGNATURE-----
