@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/ck-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.194 2011/05/07 22:31:39 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ck-sources/ChangeLog,v 1.195 2011/05/24 13:49:12 nelchael Exp $
+
+*ck-sources-2.6.39 (24 May 2011)
+
+  24 May 2011; Krzysztof Pawlik <nelchael@gentoo.org>
+  +ck-sources-2.6.39.ebuild:
+  Version bump.
 
 *ck-sources-2.6.38-r1 (07 May 2011)
 
